[gd_scene load_steps=3 format=3 uid="uid://boirynxnd1vb2"]

[ext_resource type="Texture2D" uid="uid://ba85ocl8hm3s5" path="res://Assets/LevelSelect.png" id="1_qy2bd"]
[ext_resource type="Script" path="res://level_select.gd" id="1_ty7ym"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_ty7ym")

[node name="LevelSelect" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_qy2bd")
metadata/_edit_lock_ = true

[node name="MainMenu" type="Button" parent="."]
offset_left = 716.0
offset_top = 511.0
offset_right = 1120.0
offset_bottom = 619.0
flat = true
metadata/_edit_lock_ = true

[node name="Easy" type="Button" parent="."]
offset_left = 49.0
offset_top = 121.0
offset_right = 319.0
offset_bottom = 228.0
flat = true
metadata/_edit_lock_ = true

[node name="Normal" type="Button" parent="."]
offset_left = 49.0
offset_top = 315.0
offset_right = 319.0
offset_bottom = 424.0
flat = true
metadata/_edit_lock_ = true

[node name="Hard" type="Button" parent="."]
offset_left = 49.0
offset_top = 511.0
offset_right = 319.0
offset_bottom = 619.0
flat = true
metadata/_edit_lock_ = true

[node name="InfinityMode" type="Button" parent="."]
offset_left = 376.0
offset_top = 121.0
offset_right = 646.0
offset_bottom = 228.0
flat = true
metadata/_edit_lock_ = true

[node name="OneAndDone" type="Button" parent="."]
offset_left = 378.0
offset_top = 315.0
offset_right = 648.0
offset_bottom = 424.0
flat = true
metadata/_edit_lock_ = true

[node name="AddOne" type="Button" parent="."]
offset_left = 376.0
offset_top = 510.0
offset_right = 646.0
offset_bottom = 619.0
flat = true
metadata/_edit_lock_ = true

[node name="Sound Guides" type="CheckButton" parent="."]
offset_left = 906.0
offset_top = 83.0
offset_right = 950.0
offset_bottom = 107.0

[connection signal="button_up" from="MainMenu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="Easy" to="." method="_on_easy_button_up"]
[connection signal="button_up" from="Normal" to="." method="_on_normal_button_up"]
[connection signal="button_up" from="Hard" to="." method="_on_hard_button_up"]
[connection signal="button_up" from="InfinityMode" to="." method="_on_infinity_mode_button_up"]
[connection signal="button_up" from="OneAndDone" to="." method="_on_one_and_done_button_up"]
[connection signal="button_up" from="AddOne" to="." method="_on_add_one_button_up"]
[connection signal="toggled" from="Sound Guides" to="." method="_on_sound_guides_toggled"]
